Fixes floated images overflowing content-editor
Fixes caption/paragraph text collision under certain circumstances

--- a/assets/trix/stylesheets/content.scss
+++ b/assets/trix/stylesheets/content.scss
@@ -1,5 +1,6 @@
 .trix-content {
   line-height: 1.5;
+  overflow: auto;
 
   h1 {
     font-size: 1.2em;
@@ -48,7 +49,7 @@
   }
 
   .attachment-clear {
-    margin: 0;
+    margin: 15px 0px 20px 0px;
     text-align: center;
     width: 100%;
   }
